# ci_test

./: CMakeLists.txt  main.cpp
.github/workflows/: ci.yml
test/: test_add.cpp
